# BetaLLama

./: .gitignore  CMakeLists.txt  readme.md
demo/: CMakeLists.txt  main.cpp
kuiper/include/base/: alloc.h  base.h  buffer.h
kuiper/include/model/: config.h  llama3.h
kuiper/include/op/: layer.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  buffer.cpp
kuiper/source/model/: llama3.cpp  model.cpp
kuiper/source/op/: layer.cpp
kuiper/source/op/kernels/cpu/: matmul_kernel.cpp  swiglu_kernel.cpp
kuiper/source/op/kernels/cuda/: add_kernel.cu  matmul_kernel.cu  mha_kernel.cu  swiglu_kernel.cu
test/test_tensor/: test_tensor.cpp
tools/: export_llama.py
